# mqueue

./: .gitignore  Cargo.toml  README.md  flake.nix  meson.build
build-aux/: cargo-build.sh
crates/mq-app/: Cargo.toml  build.rs
crates/mq-app/examples/: webview_test.rs
crates/mq-app/src/: actions.rs  application.rs  config.rs  main.rs  runtime.rs
crates/mq-app/src/widgets/: account_setup.rs  compose_window.rs  message_list.rs  message_object.rs  message_view.rs  mod.rs  preferences.rs  sidebar.rs  window.rs
crates/mq-core/: Cargo.toml
crates/mq-core/src/: account.rs  body.rs  config.rs  contacts.rs  email.rs  error.rs  keyring.rs  lib.rs  oauth.rs  search.rs  smtp.rs
crates/mq-core/src/imap/: client.rs  gmail_ext.rs  idle.rs  mod.rs  parse.rs  sync.rs
crates/mq-core/src/privacy/: images.rs  links.rs  mod.rs  unsubscribe.rs
crates/mq-db/: Cargo.toml
crates/mq-db/src/: cache.rs  lib.rs  models.rs
crates/mq-db/src/migrations/: 20260312000000_initial.sql  20260313000000_add_contacts.sql  20260314000000_add_drafts.sql  20260315000000_add_draft_html.sql
crates/mq-db/src/queries/: accounts.rs  attachments.rs  contacts.rs  drafts.rs  labels.rs  message_bodies.rs  messages.rs  mod.rs  offline_queue.rs  sender_allowlist.rs  settings.rs  sync_state.rs
crates/mq-net/: Cargo.toml
crates/mq-net/src/: lib.rs  monitor.rs  queue.rs
data/: com.mqmail.MqMail.desktop  com.mqmail.MqMail.metainfo.xml
data/icons/hicolor/: index.theme
data/resources/: style.css
nix/: module.nix
