[workspace]
resolver = "2"
members = [
    "crates/mq-core",
    "crates/mq-db",
    "crates/mq-net",
    "crates/mq-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.92"

[workspace.metadata.crane]
name = "mq-mail"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-journald = "0.3"
tracing-appender = "0.2"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
url = "2"
