[package]
name = "mq-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
url = { workspace = true }

# IMAP
async-imap = "0.11"
async-native-tls = "0.5"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
base64 = "0.22"

# SMTP
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Email parsing
mail-parser = "0.9"

# OAuth2
oauth2 = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Secrets (GNOME Keyring / Flatpak Secrets portal)
oo7 = "0.3"

# XDG directories
dirs = "6"
