[package]
name = "mq-net"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Async streams
futures = "0.3"

# D-Bus (NetworkManager)
zbus = "5"

# Database for offline queue
mq-db = { path = "../mq-db" }
